Add my_bags resource
