# backend/swagger.yaml
@@ -24,9 +24,50 @@ paths:
                 items:
                   type: object
                   properties:
+                    _id:
+                      type: string
+                      description: Unique ID of the bag template.
                     name:
                       type: string
                       description: A name suggestion for the bag.
                     illustration:
                       type: string
                       description: The location of an illustration characterizing the bag.
+  /my_bags:
+    get:
+      summary: Returns a list of all your bags.
+      description: |
+        This resource returns a list of all your bags. Each of your bags is
+        characterized with the preconfigured illustration and the name you've
+        assigned. Additionally each of your bags contains the items you've
+        added.
+      responses:
+        '200':
+          description: A JSON array of bags.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    _id:
+                      type: string
+                      description: Unique ID of the bag.
+                    name:
+                      type: string
+                      description: The name of the bag.
+                    illustration:
+                      type: string
+                      description: The location of an illustration characterizing the bag.
+                    content:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          name:
+                            type: string
+                            description: The name of the item.
+                          state:
+                            type: boolean
+                            description: Describes whether the item is packed or not.
